--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 
 # dependencies
 /node_modules
+/nativescript/node_modules
 
 # IDEs and editors
 /.idea
@@ -36,3 +37,6 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+# NativeScript
+/nativescript/platforms
