--- a/nativescript/app/App_Resources/Android/app.gradle
+++ b/nativescript/app/App_Resources/Android/app.gradle
@@ -5,12 +5,12 @@
 //	compile 'com.android.support:recyclerview-v7:+'
 //}
 
-android {  
-  defaultConfig {  
+android {
+  defaultConfig {
     generatedDensities = []
-    applicationId = "__PACKAGE__"  
-  }  
-  aaptOptions {  
-    additionalParameters "--no-version-vectors"  
-  }  
-} 
+    applicationId = "com.github.han41858.angular-nativescript-seed"
+  }
+  aaptOptions {
+    additionalParameters "--no-version-vectors"
+  }
+}
