--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
 		"lint" : "ng lint"
 	},
 	"private" : true,
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/han41858/Angular-NativeScript-seed.git"
+	},
 	"dependencies" : {
 		"@angular/animations" : "^4.0.0",
 		"@angular/common" : "^4.0.0",
