dependency version up

--- a/nativescript/app/App_Resources/Android/app.gradle
+++ b/nativescript/app/App_Resources/Android/app.gradle
@@ -8,7 +8,7 @@
 android {
   defaultConfig {
     generatedDensities = []
-    applicationId = "com.github.han41858.angular-nativescript-seed"
+    applicationId = "github.han41858.AngularNativescriptSeed"
   }
   aaptOptions {
     additionalParameters "--no-version-vectors"
