--- a/nativescript/package.json
+++ b/nativescript/package.json
@@ -7,33 +7,33 @@
     "url": "https://github.com/han41858/Angular-NativeScript-seed.git"
   },
   "nativescript": {
-    "id": "com.github.han41858.angular-nativescript-seed",
+    "id": "github.han41858.AngularNativescriptSeed",
     "tns-android": {
       "version": "3.1.1"
     }
   },
   "dependencies": {
-    "@angular/animations": "~4.1.0",
-    "@angular/common": "~4.1.0",
-    "@angular/compiler": "~4.1.0",
-    "@angular/core": "~4.1.0",
-    "@angular/forms": "~4.1.0",
-    "@angular/http": "~4.1.0",
-    "@angular/platform-browser": "~4.1.0",
-    "@angular/router": "~4.1.0",
-    "nativescript-angular": "~3.1.0",
-    "nativescript-theme-core": "~1.0.2",
-    "reflect-metadata": "~0.1.8",
-    "rxjs": "~5.3.0",
+    "@angular/animations": "~4.2.5",
+    "@angular/common": "~4.2.5",
+    "@angular/compiler": "~4.2.5",
+    "@angular/core": "~4.2.5",
+    "@angular/forms": "~4.2.5",
+    "@angular/http": "~4.2.5",
+    "@angular/platform-browser": "~4.2.5",
+    "@angular/router": "~4.2.5",
+    "nativescript-angular": "~3.1.1",
+    "nativescript-theme-core": "~1.0.4",
+    "reflect-metadata": "~0.1.10",
+    "rxjs": "~5.4.1",
     "tns-core-modules": "~3.1.0",
-    "zone.js": "~0.8.2"
+    "zone.js": "~0.8.12"
   },
   "devDependencies": {
-    "babel-traverse": "6.4.5",
-    "babel-types": "6.4.5",
-    "babylon": "6.4.5",
+    "babel-traverse": "6.25.0",
+    "babel-types": "6.25.0",
+    "babylon": "6.17.4",
     "lazy": "1.0.11",
     "nativescript-dev-typescript": "~0.5.0",
-    "typescript": "~2.2.1"
+    "typescript": "~2.4.1"
   }
 }
