--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 # dependencies
 /node_modules
 /nativescript/node_modules
+yarn.lock
 
 # IDEs and editors
 /.idea
@@ -40,3 +41,5 @@ Thumbs.db
 
 # NativeScript
 /nativescript/platforms
+/nativescript/yarn.lock
+/nativescript/app
