--- a/nativescript/package.json
+++ b/nativescript/package.json
@@ -7,20 +7,20 @@
     "url": "https://github.com/han41858/Angular-NativeScript-seed.git"
   },
   "nativescript": {
-    "id": "github.han41858.AngularNativescriptSeed",
+    "id": "github.han41858.AngularNativeScriptSeed",
     "tns-android": {
       "version": "3.1.1"
     }
   },
   "dependencies": {
-    "@angular/animations": "~4.2.5",
-    "@angular/common": "~4.2.5",
-    "@angular/compiler": "~4.2.5",
-    "@angular/core": "~4.2.5",
-    "@angular/forms": "~4.2.5",
-    "@angular/http": "~4.2.5",
-    "@angular/platform-browser": "~4.2.5",
-    "@angular/router": "~4.2.5",
+    "@angular/animations": "~4.1.3",
+    "@angular/common": "~4.1.3",
+    "@angular/compiler": "~4.1.3",
+    "@angular/core": "~4.1.3",
+    "@angular/forms": "~4.1.3",
+    "@angular/http": "~4.1.3",
+    "@angular/platform-browser": "~4.1.3",
+    "@angular/router": "~4.1.3",
     "nativescript-angular": "~3.1.1",
     "nativescript-theme-core": "~1.0.4",
     "reflect-metadata": "~0.1.10",
