--- a/package.json
+++ b/package.json
@@ -1,51 +1,68 @@
 {
-	"name" : "angular-native-script-seed",
-	"version" : "0.0.0",
-	"license" : "MIT",
-	"scripts" : {
-		"ng" : "ng",
-		"start" : "ng serve",
-		"build" : "ng build",
-		"test" : "ng test",
-		"lint" : "ng lint"
+	"name": "angular-native-script-seed",
+	"version": "0.0.0",
+	"license": "MIT",
+	"scripts": {
+		"postinstall": "cd nativescript&yarn install&cd ..",
+		"ng": "ng",
+		"start:web": "ng serve",
+		"build:web": "ng build",
+		"test:web": "ng test",
+		"lint:web": "ng lint",
+		"prepare:android": "yarn copyNativeScriptSrc&cd nativescript&tns platform add android",
+		"postprepare:android": "cd ..",
+		"copyNativeScriptSrc": "node util/copyNativeScriptSrc",
+		"preclean:android": "yarn copyNativeScriptSrc",
+		"clean:android": "cd nativescript&tns platform remove android&tns platform add android",
+		"prerun:android": "yarn copyNativeScriptSrc",
+		"run:android": "cd nativescript&tns run android --clean --verbose",
+		"postrun:android": "cd ..",
+		"start:android": "nodemon --exec yarn run:android -w src/client/common -w src/client/ns --delay 100ms",
+		"prebuild:android": "yarn copyNativeScriptSrc&rimraf ./dist/android&mkdirp ./dist/android",
+		"build:android": "cd nativescript&tns build android --copy-to ../dist/android/pickhaso.apk",
+		"postbuild:android": "cd .."
 	},
-	"private" : true,
+	"private": true,
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/han41858/Angular-NativeScript-seed.git"
 	},
-	"dependencies" : {
-		"@angular/animations" : "^4.2.5",
-		"@angular/common" : "^4.2.5",
-		"@angular/compiler" : "^4.2.5",
-		"@angular/core" : "^4.2.5",
-		"@angular/forms" : "^4.2.5",
-		"@angular/http" : "^4.2.5",
-		"@angular/platform-browser" : "^4.2.5",
-		"@angular/platform-browser-dynamic" : "^4.2.5",
-		"@angular/router" : "^4.2.5",
-		"core-js" : "^2.4.1",
-		"rxjs" : "^5.4.1",
-		"zone.js" : "^0.8.12"
+	"dependencies": {
+		"@angular/animations": "~4.1.3",
+		"@angular/common": "~4.1.3",
+		"@angular/compiler": "~4.1.3",
+		"@angular/core": "~4.1.3",
+		"@angular/forms": "~4.1.3",
+		"@angular/http": "~4.1.3",
+		"@angular/platform-browser": "~4.1.3",
+		"@angular/platform-browser-dynamic": "~4.1.3",
+		"@angular/router": "~4.1.3",
+		"core-js": "^2.4.1",
+		"rxjs": "^5.4.1",
+		"zone.js": "^0.8.12"
 	},
-	"devDependencies" : {
-		"@angular/cli" : "1.2.0",
-		"@angular/compiler-cli" : "^4.2.5",
-		"@angular/language-service" : "^4.2.5",
-		"@types/jasmine" : "~2.5.53",
-		"@types/jasminewd2" : "~2.0.2",
-		"@types/node" : "~8.0.7",
-		"codelyzer" : "~3.1.1",
-		"jasmine-core" : "~2.6.4",
-		"jasmine-spec-reporter" : "~4.1.1",
-		"karma" : "~1.7.0",
-		"karma-chrome-launcher" : "~2.2.0",
-		"karma-cli" : "~1.0.1",
-		"karma-coverage-istanbul-reporter" : "^1.3.0",
-		"karma-jasmine" : "~1.1.0",
-		"karma-jasmine-html-reporter" : "^0.2.2",
-		"ts-node" : "~3.1.0",
-		"tslint" : "~5.4.3",
-		"typescript" : "~2.4.1"
+	"devDependencies": {
+		"@angular/cli": "1.2.0",
+		"@angular/compiler-cli": "~4.1.3",
+		"@angular/language-service": "~4.1.3",
+		"@types/jasmine": "~2.5.53",
+		"@types/jasminewd2": "~2.0.2",
+		"@types/node": "~8.0.7",
+		"codelyzer": "~3.1.1",
+		"jasmine-core": "~2.6.4",
+		"jasmine-spec-reporter": "~4.1.1",
+		"karma": "~1.7.0",
+		"karma-chrome-launcher": "~2.2.0",
+		"karma-cli": "~1.0.1",
+		"karma-coverage-istanbul-reporter": "^1.3.0",
+		"karma-jasmine": "~1.1.0",
+		"karma-jasmine-html-reporter": "^0.2.2",
+		"mkdirp": "^0.5.1",
+		"ncp": "^2.0.0",
+		"nodemon": "^1.11.0",
+		"rimraf": "^2.6.1",
+		"ts-node": "~3.1.0",
+		"tslint": "~5.4.3",
+		"typescript": "~2.4.1"
 	}
 }
