--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
 		"build:web": "ng build",
 		"test:web": "ng test",
 		"lint:web": "ng lint",
+		"run:server": "node ./dist/server/main",
+		"prestart:server": "rimraf dist/server&tsc --p tsconfig.server.json",
+		"start:server": "nodemon -w src/server --delay 100ms --exec yarn run:server",
 		"prepare:android": "yarn copyNativeScriptSrc&cd nativescript&tns platform add android",
 		"postprepare:android": "cd ..",
 		"copyNativeScriptSrc": "node util/copyNativeScriptSrc",
@@ -38,6 +41,7 @@
 		"@angular/platform-browser-dynamic": "~4.1.3",
 		"@angular/router": "~4.1.3",
 		"core-js": "^2.4.1",
+		"express": "^4.15.3",
 		"rxjs": "^5.4.1",
 		"zone.js": "^0.8.12"
 	},
@@ -45,6 +49,7 @@
 		"@angular/cli": "1.2.0",
 		"@angular/compiler-cli": "~4.1.3",
 		"@angular/language-service": "~4.1.3",
+		"@types/express": "^4.0.36",
 		"@types/jasmine": "~2.5.53",
 		"@types/jasminewd2": "~2.0.2",
 		"@types/node": "~8.0.7",
