--- a/nativescript/package.json
+++ b/nativescript/package.json
@@ -33,6 +33,8 @@
     "babel-types": "6.25.0",
     "babylon": "6.17.4",
     "lazy": "1.0.11",
+    "nativescript-dev-pug": "github:ammarlakis/nativescript-dev-pug",
+    "nativescript-dev-stylus": "0.0.3",
     "nativescript-dev-typescript": "~0.5.0",
     "typescript": "~2.4.1"
   }
