watch:web script added

--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
 		"postinstall": "cd nativescript&yarn install&cd ..&node util/addPugToNgCli",
 		"ng": "ng",
 		"start:web": "ng serve",
+		"watch:web": "ng build --watch",
 		"build:web": "ng build",
 		"test:web": "ng test",
 		"lint:web": "ng lint",
-		"run:server": "node ./dist/server/main",
-		"prestart:server": "rimraf dist/server&tsc --p tsconfig.server.json",
+		"run:server": "rimraf dist/server/*.js&tsc --p tsconfig.server.json&node ./dist/server/main",
 		"start:server": "nodemon -w src/server --delay 100ms --exec yarn run:server",
 		"prepare:android": "yarn copyNativeScriptSrc&cd nativescript&tns platform add android",
 		"postprepare:android": "cd ..",
